src/components/ArticleDigest/Feed/styles.module.css
.wrapper {
  padding: var(--spacing-base-loose) 0;
}

.container {
  @mixin flex-center-space-between;

  gap: 2rem;

  @media (--sm-up) {
    gap: 3rem;
  }
}

.content {
  flex-grow: 1;

  @media (--sm-up) {
    flex: 1;
  }
}

.head {
  grid-area: head;
}

.author {
  @mixin flex-center-start;
}

.description {
  @mixin line-clamp;

  flex-grow: 1;
  grid-area: description;
  margin-top: var(--spacing-x-tight);
  font-size: var(--font-size-sm);
  line-height: 1.375rem;
  color: var(--color-grey-dark);
  -webkit-line-clamp: 1;

  &.lineClamp2 {
    -webkit-line-clamp: 2;
    min-height: 2.75rem;
  }
}

.cover {
  position: relative;
  flex-shrink: 0;
  grid-area: cover;
  width: 4.75rem;
  height: 4.75rem;

  & img {
    @mixin object-fit-cover;

    background-color: var(--color-grey-lighter);
    border-radius: var(--spacing-x-tight);
  }

  @media (--sm-up) {
    width: 6.625rem;
    height: 6.625rem;
  }
}

.header {
  display: flex;
  align-items: center;
  margin-bottom: var(--spacing-x-tight);
  line-height: 1;
}

